# tesis-luis-mlops-factory

./: .gitignore  README.md
cloudbuild/: api.yaml  pipelines.yaml  web-ui.yaml
inference/: Dockerfile  main.py  pyproject.toml
inference/app/: config.py
inference/app/application/: constants.py
inference/app/application/services/: inference_manager.py
inference/app/application/use_cases/: handle_inference.py
inference/app/domain/: utils.py
inference/app/domain/inference/: pm25.py
inference/app/domain/repository/: item_sql_repository.py  not_sql_repository.py
inference/app/infrastructure/: agent_core.py  client_factory.py  container.py  prompt_manager.py
inference/app/infrastructure/repository/: firestore.py
inference/app/presentation/: exception_handlers.py
inference/app/presentation/api/: dependencies.py  dto.py
inference/app/presentation/api/routes/: checks.py  prediction.py
inference/application/use_cases/: handle_agents.py
inference/domain/: contants.py  exceptions.py  utils.py
inference/domain/repository/: item_sql_repository.py
inference/infrastructure/: container.py  contants.py  orchestrator.py
inference/infrastructure/repository/: mongo_db.py
inference/presentation/: exception_handlers.py
inference/presentation/api/: error_mapper.py  exceptions.py
inference/presentation/api/routes/: agents.py
pipelines/: Dockerfile  README.md  cloudbuild.yaml  get_file.py  ja.py  out.txt  pyproject.toml  requirements.txt
pipelines/conf/: logging.yml
pipelines/conf/base/: catalog.yml  globals.yml  parameters_dummy_execution.yml  parameters_evaluate_drifting.yml  parameters_ingest_meteorical_features.yml  parameters_prediction.yml  parameters_training.yml
pipelines/conf/base/sql/: consolidate-settlement.sql  merge-reprocessed-entities.sql
pipelines/conf/dev/: globals.yml  parameters.yml
pipelines/conf/prod/: globals.yml
pipelines/conf/test/: globals.yml
pipelines/src/mlops_pm25/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
pipelines/src/mlops_pm25/pipelines/batch_process/: __init__.py  constants.py  nodes.py  pipeline.py  utils.py
pipelines/src/mlops_pm25/pipelines/batch_process/repository/: big_query_client.py  retry_manager.py  workflow_agent_client.py
pipelines/src/mlops_pm25/pipelines/commons/: __init__.py  nodes.py  pipeline.py  utils.py
pipelines/src/mlops_pm25/pipelines/dummy_execution/: __init__.py  nodes.py  pipeline.py
pipelines/src/mlops_pm25/pipelines/evaluate_drifting/: __init__.py  nodes.py  pipeline.py
pipelines/src/mlops_pm25/pipelines/export_to_bigquery/: __init__.py  constants.py  nodes.py  pipeline.py
pipelines/src/mlops_pm25/pipelines/ingest_meteorical_features/: __init__.py  nodes.py  pipeline.py
pipelines/src/mlops_pm25/pipelines/ingest_meteorological_features/: nodes.py  pipeline.py
pipelines/src/mlops_pm25/pipelines/prediction/: __init__.py  nodes.py  pipeline.py
pipelines/src/mlops_pm25/pipelines/send_notificaction/: __init__.py  constants.py  nodes.py  pipeline.py
pipelines/src/mlops_pm25/pipelines/training/: __init__.py  models.py  nodes.py  pipeline.py
pipelines/tests/pipelines/dummy_execution/: test_pipeline.py
pipelines/tests/pipelines/evaluate_drifting/: test_pipeline.py
pipelines/tests/pipelines/ingest_meteorical_features/: test_pipeline.py
pipelines/tests/pipelines/prediction/: test_pipeline.py
pipelines/tests/pipelines/training/: test_pipeline.py
(+48 files in other folders)
